# AndroidDopplerHabr

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/agalilov/doppler/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  kiss-fft-lib.cpp  kiss_fft.cpp  kiss_fft.h
app/src/main/java/agalilov/doppler/: AudioParameters.java  FFT.java  MainActivity.java  MySurfaceView.java  PlayAudioThread.java  ProcessingThread.java  RecordAudioThread.java
app/src/main/java/uk/me/berndporr/kiss_fft/: KISSFastFourierTransformer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/agalilov/doppler/: ExampleUnitTest.java
gradle/: libs.versions.toml
